Search input / fix typeahead dropdown overflow

--- a/web-ui/src/main/resources/catalog/views/sextant/less/gn_search_sextant.less
+++ b/web-ui/src/main/resources/catalog/views/sextant/less/gn_search_sextant.less
@@ -585,6 +585,7 @@ gn-wps-process-form label, [sxt-main-viewer] .panel-tools gn-wps-process-form la
 
       li {
         padding: 0;
+        overflow: hidden;
         a {
           padding: 0.2rem 1.1rem;
           text-overflow: ellipsis;
